# lox

./: CMakeLists.txt  README.md
src/: lox.cpp
src/scanner/: Scanner.cpp  Scanner.h  Token.cpp  Token.h
tests/: test.prog
